[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/tools/jumpingtrap.png" type="Texture" id=1]
[ext_resource path="res://scenes/JumpingTrap.gd" type="Script" id=2]
[ext_resource path="res://scripts/GuideLine.gd" type="Script" id=4]
[ext_resource path="res://Joystick/joystick_background_cross.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/jump.ogg" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14.3537, 14.63 )

[node name="JumpingTrap" type="Area2D"]
collision_mask = 27
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
dist = 200.0
running_time = 0.7

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "jump"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="RunningTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CheckingTimer" type="Timer" parent="."]
autostart = true

[node name="TargetRayCast2D1" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0.25, 0.25 )
enabled = true
cast_to = Vector2( 111, 0 )
collision_mask = 144
collide_with_areas = true
script = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="TargetRayCast2D1"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="TargetRayCast2D2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0.25, 0.25 )
rotation = 0.174533
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 2147483792
collide_with_areas = true
script = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="TargetRayCast2D2"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0

[node name="TargetRayCast2D3" type="RayCast2D" parent="."]
visible = false
rotation = -0.174533
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 144
collide_with_areas = true
script = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="TargetRayCast2D3"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 200, 0 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.78
max_distance = 300.0
attenuation = 3.24901
bus = "sound"
[connection signal="body_entered" from="." to="." method="_on_JumpingTrap_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_JumpingTrap_body_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="RunningTimer" to="." method="_on_RunningTimer_timeout"]
[connection signal="timeout" from="CheckingTimer" to="." method="_on_CheckingTimer_timeout"]
